    usage of the "=" assignment operator. We need to use "+=" here, so the sg
    module is loaded in addition to other scsi modules, which are loaded via
    the modalias rule. Thanks to Tommaso Colombo for the analysis.
  * Cherry-pick upstream fix which prevents systemd from entering an infinite
    loop when trying to break an ordering cycle. (Closes: #752259)

 -- Michael Biebl <biebl@debian.org>  Fri, 27 Jun 2014 22:37:23 +0200

systemd (204-12) unstable; urgency=medium

  [ Martin Pitt ]
  * Change the sg loading rule (for Debian #657948) back to using modprobe.
    kmod is too fast and then sg races with sd, causing the latter to not see
    SCSI disks.  (Closes: #752591, #752605)

  [ Michael Biebl ]
  * Update udev bug-script to attach instead of paste extra info if a new
    enough reportbug version is available.

 -- Michael Biebl <biebl@debian.org>  Wed, 25 Jun 2014 10:55:12 +0200

systemd (204-11) unstable; urgency=medium

  [ Martin Pitt ]
  * Explain patch management in debian/README.source. (Closes: #739113)
  * Replace "Always probe cpu support drivers" patch with cherry-picked
    upstream fix which is more general.
  * Advertise hibernation only if there's enough free swap. Patches backported
    from current upstream. (LP: #1313522)
  * Fix typo in sg loading rule to make it actually work.

  [ Michael Biebl ]
  * Make no-patch-numbers the default for gbp-pq.
  * Cherry-pick upstream fix to properly handle multiline syslog messages.
    (Closes: #746351)
  * Cherry-pick upstream fix for libudev which fixes a memleak in
    parent_add_child().
  * Drop "-b debian" from Vcs-Git since we use the master branch for
    packaging now.
  * Drop Conflicts: sysvinit (<< 2.88dsf-44~) from systemd-sysv since this
    breaks dist-upgrades from wheezy when switching from sysvinit to
    systemd-sysv as default init. While downgrading the Pre-Depends in
    sysvinit would have been an alternative, dropping the Conflicts and only