@@ -17,8 +17,8 @@ It has the following modifications:
 ---
  Makefile.am                               |   9 +
  src/insserv-generator/Makefile            |  28 +++
- src/insserv-generator/insserv-generator.c | 310 ++++++++++++++++++++++++++++++
- 3 files changed, 347 insertions(+)
+ src/insserv-generator/insserv-generator.c | 321 ++++++++++++++++++++++++++++++
+ 3 files changed, 358 insertions(+)
  create mode 100644 src/insserv-generator/Makefile
  create mode 100644 src/insserv-generator/insserv-generator.c
 
@@ -85,10 +85,10 @@ index 0000000..9d07505
 +.PHONY: all clean
 diff --git a/src/insserv-generator/insserv-generator.c b/src/insserv-generator/insserv-generator.c
 new file mode 100644
-index 0000000..af5267c
+index 0000000..904e8cb
 --- /dev/null
 +++ b/src/insserv-generator/insserv-generator.c
-@@ -0,0 +1,310 @@
+@@ -0,0 +1,321 @@
 +/*-*- Mode: C; c-basic-offset: 8; indent-tabs-mode: nil -*-*/
 +
 +/***
@@ -271,6 +271,7 @@ index 0000000..af5267c
 +                                STRV_FOREACH (j, parsed+1) {
 +                                        _cleanup_free_ char *unit = NULL;
 +                                        _cleanup_free_ char *dep = NULL;
++                                        _cleanup_free_ char *initscript = NULL;
 +
 +                                        /* targets should not pull in and activate other targets so skip them */
 +                                        if (*j[0] == '$')
@@ -282,6 +283,16 @@ index 0000000..af5267c
 +                                                name = *j;
 +                                        if ((sysv_translate_facility(name, NULL, &dep) < 0) || !dep)
 +                                                continue;
++
++                                        /* don't create any drop-in configs if the
++                                         * corresponding SysV init script does not exist */
++                                        initscript = strjoin("/etc/init.d/", name, NULL);
++                                        if (access(initscript, F_OK) < 0) {
++                                                strcat(initscript, ".sh");
++                                                if (access(initscript, F_OK) < 0) {
++                                                        continue;
++                                                }
++                                        }
 +
 +                                        unit = strjoin(arg_dest, "/", dep, ".d/50-",basename(filename),"-",parsed[0],".conf", NULL);
 +                                        if (!unit)
