@@ -7,6 +7,8 @@ systemd (204-13) UNRELEASED; urgency=medium
     the modalias rule. Thanks to Tommaso Colombo for the analysis.
   * Cherry-pick upstream fix which prevents systemd from entering an infinite
     loop when trying to break an ordering cycle. (Closes: #752259)
+  * Update insserv generator to not create any drop-in files for services
+    where the corresponding SysV init script does not exist.
 
  -- Michael Biebl <biebl@debian.org>  Fri, 27 Jun 2014 22:37:23 +0200
 
